# ZeroMedia

./: .gitignore  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/org/windmill/zeromedia/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmedia.cpp
app/src/main/cpp/biz/: FFJavaCallback.cpp  FFJavaCallback.h  MediaThread.cpp  MediaThread.h  MergeMediaThread.cpp  MergeMediaThread.h
app/src/main/cpp/core/: AndroidLog.h  BaseThread.cpp  BaseThread.h  Config.h
app/src/main/cpp/libavutil/: ffversion.h
app/src/main/cpp/libx264_x265_aac/: x264_config.h
app/src/main/java/org/windmill/zeromedia/base/: BaseActivity.kt
app/src/main/java/org/windmill/zeromedia/core/: Jni.kt  JniCallback.kt
app/src/main/java/org/windmill/zeromedia/ui/: IndexActivity.kt
app/src/main/res/layout/: index_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/windmill/zeromedia/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
